Update documentation and fix feedbacks endpoint
